--- a/TuTienda-Riera/src/App.css
+++ b/TuTienda-Riera/src/App.css
@@ -14,7 +14,7 @@
   }
 }
 
-.App-header {
+.App .App-header {
   background-color: #000000;
   height: 60px;
   width: 100%;
@@ -41,7 +41,7 @@
   margin: 0px;
 }
 
-.Navbar {
+.App-header .Navbar {
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
@@ -52,18 +52,31 @@
   justify-content: flex-end;
 }
 
-.Navbar li {
+.App-header .Navbar a {
+  color: rgb(0, 204, 255);
+  margin: 5px;
+  margin-right: 20px;
+  transition: all .1s;
+  text-decoration: none;
+}
+
+.App-header .Navbar a:hover {
+  color: white;
+}
+
+.App-header .Navbar li {
   margin: 0px 10px;
   letter-spacing: 1px;
   align-self: center;
 }
 
-.Navbar li a {
+.App-header .Navbar li a {
   color: white;
   text-decoration: none;
+  color: red !important;
 }
 
-.Navbar li a:active {
+.App-header .Navbar li a:active {
   color: yellow;
 }
 
@@ -80,10 +93,23 @@
   }
 }
 
+.Bienvenida {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.Bienvenida h1 {
+  color: white;
+}
+
 .Productos {
   background-color: rgb(17, 17, 17);
   color: white;
   padding: 5px 0px 30px 0px;
+  width: 100%;
+  text-align: center;
 }
 
 .Productos h2 {
@@ -104,4 +130,25 @@
 .Productos .listaProductos {
   list-style: none;
   margin-top: 5px;
+}
+
+.Productos .display {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  line-height: 7px;
+}
+
+.Productos .display button {
+  background-color: white;
+  margin: 0px;
+  border: 1px solid rgb(192, 192, 192);
+}
+
+.Productos .display .numero {
+  width: 100px;
+  height: 30px;
+  border: 1px solid rgb(192, 192, 192);
+  padding: 10px;
 }
