--- a/TuTienda-Riera/src/App.css
+++ b/TuTienda-Riera/src/App.css
@@ -130,6 +130,8 @@
 .Productos .listaProductos {
   list-style: none;
   margin-top: 5px;
+  color: black;
+  font-weight: 600;
 }
 
 .Productos .display {
@@ -144,6 +146,13 @@
   background-color: white;
   margin: 0px;
   border: 1px solid rgb(192, 192, 192);
+}
+
+.error p {
+  position: relative;
+  margin: 5px 0px 0px 0px;
+  font-weight: 300;
+  color: red;
 }
 
 .Productos .display .numero {
