--- a/ecommerce/src/App.css
+++ b/ecommerce/src/App.css
@@ -173,6 +173,15 @@
   margin: 0px 2px;
 }
 
+.productos .card img {
+  min-width: 200px;
+  min-height: 200px;
+  max-width: 200px;
+  max-height: 200px;
+  align-self: center;
+  padding-top: 17px;
+}
+
 .productos .card-body {
   color: black;
 }
@@ -206,13 +215,19 @@
 }
 
 .detalle-producto p {
-  border: none;
-  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.61);
+  border: 1px solid rgb(46, 46, 46);
   border-radius: 4px;
   margin: 10px;
   font-weight: 400;
   color: white;
   padding: 5px;
+}
+
+.detalle-producto img {
+  min-width: 200px;
+  min-height: 200px;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .detalle-producto button {
