--- a/ecommerce/src/assets/css/App.css
+++ b/ecommerce/src/assets/css/App.css
@@ -150,9 +150,9 @@
 }
 
 .display button {
-  background-color: white;
   margin: 0px;
   border: 1px solid rgb(192, 192, 192);
+  border-radius: 5px;
 }
 
 .error p {
@@ -163,10 +163,11 @@
 }
 
 .display .numero {
-  width: 100px;
-  height: 30px;
+  width: 200px;
+  height: 100%;
   border: 1px solid rgb(192, 192, 192);
-  padding: 10px;
+  padding: 15px;
+  border-radius: 5px;
 }
 
 
@@ -193,6 +194,11 @@
   color: black;
 }
 
+.item-detail-container {
+  font-weight: 200;
+  margin-top: 30px;
+  font-size: 30px;
+}
 
 .detalle-producto {
   width: 90%;
